[JENKINS-56018] Remove add dependencies of tests